fix new chatroom input box alignment

--- a/client/stylesheets/chatroom.scss
+++ b/client/stylesheets/chatroom.scss
@@ -44,6 +44,7 @@
 	#new-chatroom-container {
 
 		input {
+			vertical-align: center;
 			display: inline-block;
 			width: 7em;
 			border: 1px solid rgba(255,255,255,0.5);
